# ContentNavigator

./: .gitignore  README.md  Receive.py  Trial.py  Your Web Ref.txt  app.py  doc_search.py  docs_search_extractor.ipynb  docs_search_extractor.py  multidoc_app.py  pyproject.toml  user_inputs_dte.py
docs/: A Closer Look at Trump's Years of Criticizing NATO.html  Donald Drump - Britannica.html  Donald Trump - Life Before The Presidency.csv  Donald Trump Wiki.docx  Hush Money Trial.txt  Links Between Trump Associates and Russian Officals.docx  The Trump Presidency - A Success Story.txt  Trump Claims Full Suppot of DeSantis.docx  Trump Meets Former GOP Rival.pptx  Trump's Mirror to Germany.txt  Trump’s war on the Deep State.html  response_dict.pkl  user_query.txt
