[tool.poetry]
name = "contentnavigator"
version = "0.1.0"
description = "Search user requested information from the pool of uploaded documents."
authors = ["ShahMitul-GenAI <replymitul@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.12, <3.13"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
langchain-openai = "^0.1.8"
langchain-pinecone = "^0.1.1"
streamlit = "^1.35.0"
docarray = "^0.40.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
